really handle filename provision, also update about me sections since I live in Bariloche now

--- a/src/pages/es/sobre.mdx
+++ b/src/pages/es/sobre.mdx
@@ -4,7 +4,7 @@ layout: '../../layouts/Base.astro'
 import { calcAge } from "../../utils/calcAge";
 export const age = calcAge;
 
-Hola, soy Lucas, un humano de {age} años de Buenos Aires, Argentina, Sudamérica.
+Hola, soy Lucas, un humano de {age} años de Bariloche, Argentina, Sudamérica.
 
 ## Esta página
 
