--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -5,7 +5,7 @@ layout: "../layouts/Base.astro"
 import { calcAge } from "../utils/calcAge";
 export const age = calcAge;
 
-**Hello!** I'm Lucas, a {age} years old human from Buenos Aires, Argentina, South America.
+**Hello!** I'm Lucas, a {age} years old human from San Carlos de Bariloche, Argentina, South America.
 
 ## This website
 
