update about me

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -24,8 +24,8 @@ I studied Biology in Buenos Aires University (UBA) from 2011 to 2019, when I gra
 ### Interests
 
 -   **[Reading](/reading)**: Non-fiction essays about modern stuff, history, classics, science fiction, fantasy, etc. Would love to read more horror/suspense. But I love reading _anything_. Been browsing lots of blogs and personal webpages in the last few months.
--   **Hiking**, although I live ~500km from the nearest interesting hiking spot it is something I love every time I have the opportunity to get close to the Andes mountains or the Córdoba Sierras (mountains of a lower altitude).
--   **Running**. Long distance-ish. Although I come and go, I really enjoy when I can go beyond 8km. Most I've ran is 13km. Always with music on.
+-   **Hiking**, anything mountain-related tbh
+-   **Running**. Long distance and trail.
 -   **Videogames**: Fallout New Vegas, Age of Empires, Kerbal Space Program and Hollow Knight are some games I've loved the most. I keep a [Backloggd](https://www.backloggd.com/u/synthopia/) too.
 -   **Cooking and baking**
 -   **Driving** (no matter where, but _not_ in the city though)
