--- a/src/pages/es/sobre.mdx
+++ b/src/pages/es/sobre.mdx
@@ -25,8 +25,8 @@ Hoy en día el desarrollo web es mi trabajo actual de tiempo completo y comencé
 ### Intereses
 
 - **[Lectura](/leyendo)**: ensayos de no ficción sobre temas modernos, historia, clásicos, ciencia ficción, fantasía, etc. Me encantaría leer más terror/suspenso. Pero me encanta leer _cualquier cosa_. He estado navegando por muchos blogs y páginas web personales en los últimos meses.
-- **Trekking**, aunque vivo a ~500km del lugar más cercano interesante para hacer senderismo, es algo que amo hacer cada vez que tengo la oportunidad de acercarme a la Cordillera de los Andes o a las Sierras de Córdoba.
-- **Correr**. De larga distancia. Aunque voy y vengo, disfruto mucho cuando puedo ir más allá de los 8 km. Lo máximo que he corrido son 13 km. Siempre con música.
+- **Cualquier actividad en las montañas**
+- **Correr**. Trail y larga distancia especialmente.
 - **Videojuegos**: Fallout New Vegas, Age of Empires, Kerbal Space Program y Hollow Knight son algunos de los juegos que más amé. También tengo un [Backloggd](https://www.backloggd.com/u/synthopia/).
 - **Cocinar**
 - **Manejar** (en rutas y autopistas, sin importar a dónde)
